<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/autentifikacia_titul_margin_bottom"
            android:fontFamily="@font/raleway_regular"
            android:gravity="center"
            android:shadowColor="@android:color/black"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/nazov_aplikacie"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/autentifikacia_titul_velkost_pisma" />

        <TextView
            android:layout_width="@dimen/autentifikacia_sirka_textu"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/autentifikacia_text_margin_bottom"
            android:fontFamily="@font/raleway_light"
            android:gravity="center"
            android:text="@string/autentifikacia_prihlasenie_text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/autentifikacia_velkost_pisma_textu" />

        <EditText
            android:id="@+id/prihlasenie_email_vstup"
            android:layout_width="@dimen/autentifikacia_sirka_vstupov"
            android:layout_height="@dimen/autentifikacia_vyska_vstupov"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/autentifikacia_oddelenie_vstupov"
            android:background="@drawable/ic_edittext_autentifikacia"
            android:fontFamily="@font/raleway_light"
            android:gravity="center"
            android:hint="@string/pomoc_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/autentifikacia_velkost_pisma_vstupov" />

        <EditText
            android:id="@+id/prihlasenie_heslo_vstup"
            android:layout_width="@dimen/autentifikacia_sirka_vstupov"
            android:layout_height="@dimen/autentifikacia_vyska_vstupov"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/autentifikacia_oddelenie_vstupov"
            android:background="@drawable/ic_edittext_autentifikacia"
            android:fontFamily="@font/raleway_light"
            android:gravity="center"
            android:hint="@string/pomoc_heslo"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/autentifikacia_velkost_pisma_vstupov" />

        <Button
            android:id="@+id/prihlasit_sa"
            android:layout_width="@dimen/autentifikacia_sirka_vstupov"
            android:layout_height="@dimen/autentifikacia_vyska_vstupov"
            android:layout_gravity="center"
            android:background="@drawable/ic_tlacidlo_autentifikacia_aktivna"
            android:fontFamily="@font/raleway_regular"
            android:gravity="center"
            android:text="@string/autentifikacia_tlacidlo_prihlasit_sa"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/autentifikacia_velkost_pisma_vstupov" />

        <LinearLayout
            android:layout_width="@dimen/autentifikacia_sirka_vstupov"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/autentifikacia_oddelenie_vstupov"
            android:orientation="horizontal">

            <Button
                android:id="@+id/zabudnute_heslo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/autentifikacia_prihlasenie_pomer_styri"
                android:background="@android:color/transparent"
                android:fontFamily="@font/raleway_light"
                android:gravity="right|center"
                android:text="@string/autentifikacia_zabudol_som_heslo"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/autentifikacia_prihlasenie_velkost_pisma_pre_zabudnute_heslo_a_registracia"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="@integer/autentifikacia_prihlasenie_pomer_jedna"
                android:fontFamily="@font/raleway_light"
                android:gravity="center"
                android:text=" | "
                android:textColor="@android:color/white"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/registrovat_sa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="@integer/autentifikacia_prihlasenie_pomer_tri"
                android:background="@android:color/transparent"
                android:fontFamily="@font/raleway_light"
                android:gravity="left|center"
                android:text="@string/autentifikacia_registrovat"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/autentifikacia_prihlasenie_velkost_pisma_pre_zabudnute_heslo_a_registracia"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>